[package]
name = "tendermint-prover"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ibc
ibc = { path = "../../../ibc/modules", features = [] }
ibc-proto = { path = "../../../ibc/proto" }

# Tendermint
tendermint = { workspace = true }
tendermint-rpc   = { workspace = true }
tendermint-proto = { workspace = true }
tendermint-light-client = { workspace = true }
tendermint-light-client-verifier = { workspace = true }